[gd_scene load_steps=23 format=3 uid="uid://bcxxmjp1ch5pq"]

[ext_resource type="Texture2D" uid="uid://bqxwsimjepqco" path="res://art/sprites/player/idle2.png" id="1_331m4"]
[ext_resource type="PackedScene" uid="uid://bi6cus3fyu7ux" path="res://components/modifiers.tscn" id="3_hnclq"]
[ext_resource type="Script" path="res://scenes/unit_sprite.gd" id="3_oibvf"]
[ext_resource type="PackedScene" uid="uid://0pyqt38pl3f4" path="res://components/health_node.tscn" id="4_1xpga"]
[ext_resource type="PackedScene" uid="uid://ctud24sf1fqks" path="res://components/stats_node.tscn" id="5_b3p2f"]
[ext_resource type="Script" path="res://components/cards/CardFunctions/card_stats.gd" id="6_g68ne"]
[ext_resource type="PackedScene" uid="uid://b0spuyowpthca" path="res://components/deck_node.tscn" id="6_s84ip"]
[ext_resource type="Resource" uid="uid://c534yv87m0b1" path="res://components/cards/CardDictionary/Player/AttackCards/basic_phys_attack.tres" id="8_3b4vm"]
[ext_resource type="PackedScene" uid="uid://bx3b6tvvx5et5" path="res://components/units/battle_readout.tscn" id="9_nsbm0"]
[ext_resource type="Resource" uid="uid://c4k3kk3bkrtt7" path="res://components/cards/CardDictionary/Player/DefenseCards/basic_defend.tres" id="9_vxgn2"]
[ext_resource type="Resource" uid="uid://getptn3kqhxl" path="res://components/cards/CardDictionary/Player/HealCards/basic_heal.tres" id="10_u5t1y"]
[ext_resource type="PackedScene" uid="uid://34o105ivvj6t" path="res://target_indicator.tscn" id="14_aoeqe"]
[ext_resource type="PackedScene" uid="uid://fkpnfc8tmhkj" path="res://components/card_and_unit_area_detection.tscn" id="21_nqyrs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nte8v"]
atlas = ExtResource("1_331m4")
region = Rect2(0, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_m766r"]
atlas = ExtResource("1_331m4")
region = Rect2(112, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_31wrc"]
atlas = ExtResource("1_331m4")
region = Rect2(224, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkm38"]
atlas = ExtResource("1_331m4")
region = Rect2(336, 0, 112, 252)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfxog"]
atlas = ExtResource("1_331m4")
region = Rect2(448, 0, 112, 252)

[sub_resource type="SpriteFrames" id="SpriteFrames_urjdb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nte8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m766r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31wrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkm38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfxog")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7bv7s"]
radius = 45.0
height = 254.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ab5fk"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 100, 0)
emission_shape = 3
emission_box_extents = Vector3(40, 20, 1)
orbit_velocity_min = -0.0999999
orbit_velocity_max = 0.1
radial_velocity_min = -20.0
radial_velocity_max = 40.0
gravity = Vector3(0, -100, 0)
linear_accel_min = -67.79
linear_accel_max = 71.15
color = Color(1, 0.37745, 0.398392, 1)
hue_variation_min = -0.13
hue_variation_max = 0.18

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibgll"]

[node name="Player" type="AnimatedSprite2D" node_paths=PackedStringArray("anims", "deckNode", "healthNode", "statsNode") groups=["player_unit"]]
sprite_frames = SubResource("SpriteFrames_urjdb")
animation = &"idle"
autoplay = "idle"
script = ExtResource("3_oibvf")
anims = NodePath("AnimationPlayer")
deckNode = NodePath("DeckNode")
healthNode = NodePath("HealthNode")
statsNode = NodePath("StatsNode")

[node name="Modifiers" parent="." instance=ExtResource("3_hnclq")]

[node name="StatsNode" parent="." instance=ExtResource("5_b3p2f")]

[node name="HealthNode" parent="." node_paths=PackedStringArray("statsNode", "modifiers") instance=ExtResource("4_1xpga")]
hit_points = 25
max_hit_points_base = 100
statsNode = NodePath("../StatsNode")
modifiers = NodePath("../Modifiers")

[node name="DeckNode" parent="." instance=ExtResource("6_s84ip")]
deck = Array[ExtResource("6_g68ne")]([ExtResource("8_3b4vm"), ExtResource("8_3b4vm"), ExtResource("8_3b4vm"), ExtResource("9_vxgn2"), ExtResource("9_vxgn2"), ExtResource("9_vxgn2"), ExtResource("10_u5t1y"), ExtResource("10_u5t1y")])

[node name="BattleReadout" parent="." node_paths=PackedStringArray("statsNode", "healthNode") instance=ExtResource("9_nsbm0")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = -282.0
offset_right = -133.0
offset_bottom = -282.0
grow_horizontal = 2
grow_vertical = 2
statsNode = NodePath("../StatsNode")
healthNode = NodePath("../HealthNode")

[node name="TwoWayDetection" parent="." groups=["player_hitbox"] instance=ExtResource("21_nqyrs")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TwoWayDetection"]
shape = SubResource("CapsuleShape2D_7bv7s")

[node name="TargetIndicator" parent="." instance=ExtResource("14_aoeqe")]
position = Vector2(3, -193)

[node name="UnitParticles" type="GPUParticles2D" parent="."]
scale = Vector2(0.336442, 1e-05)
emitting = false
amount = 400
process_material = SubResource("ParticleProcessMaterial_ab5fk")
explosiveness = 0.5
randomness = 0.5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
libraries = {
"": SubResource("AnimationLibrary_ibgll")
}

[connection signal="health_updated" from="HealthNode" to="BattleReadout" method="update_readout"]
[connection signal="target_has_changed" from="TwoWayDetection" to="TargetIndicator" method="_on_two_way_detection_target_has_changed"]
